[package]
name = "jwt-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }
jsonwebtoken = "9.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
rand = "0.8.5"
chrono = "0.4.35"
cookie = "0.18.0"
tower-cookies = "0.10.0"
reqwest = { version = "0.12.15", features = ["cookies", "json", "multipart"] }
anyhow = "1.0"
uuid = { version = "1.16.0", features = ["v4"] }
tempfile = "3.19.1"
